[workspace]
members = [
    "contracts/service",
    "contracts/market", 
    "contracts/oracle",
    "sdk/rust",
]
resolver = "2"

[workspace.dependencies]
linera-sdk = { git = "https://github.com/linera-io/linera-protocol", branch = "testnet_conway" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
