[package]
name = "oddsstream-market"
version = "0.1.0"
edition = "2021"
authors = ["OddsStream Team"]
description = "OddsStream Market Application - Individual prediction markets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oddsstream/linera-contracts"

# Important: Use the Conway testnet branch
[dependencies]
linera-sdk = { git = "https://github.com/linera-io/linera-protocol", branch = "testnet_conway", features = ["async", "test"] }
async-trait = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
hex = "0.4"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
test-log = "0.2"

[features]
default = ["async-trait"]
test = ["linera-sdk/test"]

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"  # Optimize for size
panic = "abort"

[profile.dev]
opt-level = 0
debug = true