[package]
name = "oddsstream-sdk-rust"
version = "0.1.0"
edition = "2021"
authors = ["OddsStream Team"]
description = "Rust SDK for OddsStream on Linera Conway"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oddsstream/linera-sdk"

[dependencies]
linera-sdk = { git = "https://github.com/linera-io/linera-protocol", branch = "testnet_conway" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
hex = "0.4"
base64 = "0.22.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
test-log = "0.2"

[lib]
name = "oddsstream_sdk"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "oddsstream-cli"
path = "src/bin/cli.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"